[package]
name = "pajbot2-points"
version = "0.1.0"
authors = ["Rasmus Karlsson <rasmus.karlsson@pajlada.com>"]

[dependencies]
bincode = "1"
byteorder = "1"
bytes = "0.4"
ctrlc = { version = "3", features = ["termination"] }
env_logger = "0.5"
log = { version = "0.4", features = ["release_max_level_info"] }
serde = "1"
tokio = "0.1"
tokio-codec = "0.1"
